# overnight-anomaly

./: .dockerignore  .gitignore  .railway-github-trigger  ARCHITECTURE.md  B3_ACCOUNT_SETUP.md  B3_COLLECTOR_DEPLOYMENT.md  B3_COLLECTOR_RUNBOOK.md  BACKTESTING_STRATEGIES_RESEARCH.md  BUILD_STATUS.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.collector  Dockerfile.dev  EXPERIMENT_RESULTS.md  GET_STARTED.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_EXPERIMENTS.md  QUICK_START.md  README.md  RFC-001-data-parsing.md  RFC-FRONTEND.md  RFC-TRADING-SAAS.md  TRADING_ALGOS_FRAMEWORK.md  TRADING_SETUP.md  analysis_overnight_anomaly.py  b3_data_collector.py  backtest_strategies.py  docker-compose.yml  experiment_framework.py  internet.py  live_trader.py  parse_cotahist.py  railway.toml  requirements-collector.txt  shock_gap_report.py  trading_dashboard.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  railway.toml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
migrations/: 001_create_tables.sql  002_seed_strategies.sql  003_add_signals.sql  004_add_trade_source.sql  005_backtest_runs.sql  006_activate_hvf.sql  007_new_strategies.sql  008_backtest_jobs.sql  009_flip_extreme_gap_fade.sql  010_extreme_gap_liquidity_filters.sql  011_liquidity_capacity_columns.sql
scripts/: backtest.py  requirements.txt
src/: auth.rs  backtest_runner.rs  db.rs  main.rs  models.rs  scheduler.rs  utils.rs
src/accounts/: mod.rs
src/routes/: mod.rs
src/strategies/: mod.rs
(+8 files in other folders)
