[package]
name = "trading-saas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading-saas"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
rand = "0.8"
async-trait = "0.1"
jsonwebtoken = "9.2"
bcrypt = "0.15"
base64 = "0.21"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
sha2 = "0.10"
hmac = "0.12"

[profile.release]
opt-level = 3
lto = true
